--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "animal-rescue-backend",
+  "name": "animal-rescue-frontend",
   "version": "1.0.0",
-  "description": "流浪动物救助中心后端服务",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.2"
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.5.1",
+    "element-plus": "^2.4.10",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.5.4",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.1.3"
+  }
 }
+    
